--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benny's 39. Geburtstag - Einladung</title>
+    <title>Ben's 39. Geburtstag - Einladung</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
@@ -11,41 +11,62 @@
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='50%' y='50%' style='dominant-baseline:central;text-anchor:middle;font-size:90px;'%3E🎂%3C/text%3E%3C/svg%3E" type="image/svg+xml">
 </head>
 <body>
-    <div class="container">
-        <header class="fade-in">
-            <h1>Du bist eingeladen!</h1>
-            <h2>Ben feiert seinen 39. Geburtstag</h2>
-        </header>
+    <div class="intro-overlay">
+        <h1 class="intro-text">Bald ist es soweit...</h1>
+    </div>
 
-        <section class="details fade-in-delay">
-            <div class="detail-item">
+    <div class="card-container">
+        <div class="card fade-in-card">
+            <header>
+                <h1>Du bist eingeladen!</h1>
+                <h2>Ben feiert seinen 39. Geburtstag</h2>
+            </header>
+        </div>
+
+        <div class="card fade-in-card">
+            <div class="card-content">
                 <h3>Wann?</h3>
                 <p>26. Juli 2025</p>
                 <p>Ab 18:00 Uhr</p>
             </div>
-            <div class="detail-item">
+        </div>
+
+        <div class="card fade-in-card">
+            <div class="card-content">
                 <h3>Wo?</h3>
                 <p>In meinem Garten</p>
                 <p>Dortmund</p>
-                <a href="https://www.google.com/maps/place/Schillstra%C3%9Fe+28,+44339+Dortmund/@51.5535057,7.4565711,17z/data=!3m1!4b1!4m6!3m5!1s0x47b91a6cea30a9c9:0x3aede9a97614cd21!8m2!3d51.5535024!4d7.459146!16s%2Fg%2F11c13tpqk2?entry=ttu&g_ep=EgoyMDI1MDYyMi4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="map-link">Auf Karte anzeigen</a>
+                <a href="http://maps.google.com/?q=Dortmund" target="_blank" class="map-link">Auf Karte anzeigen</a>
             </div>
-            <div class="detail-item">
+        </div>
+
+        <div class="card fade-in-card">
+            <div class="card-content">
                 <h3>Was?</h3>
                 <p>Großes BBQ</p>
                 <p>Für Speisen & Getränke ist gesorgt!</p>
             </div>
-        </section>
+        </div>
 
-        <section class="rsvp fade-in-delay-more">
-            <h3>Bitte gib mir Bescheid!</h3>
-            <p>Damit ich besser planen kann, sag mir bitte kurz Bescheid, ob du dabei bist.</p>
-            <a href="mailto:benjamin.risse@gmail.com?subject=RSVP%20Geburtstag%20Ben" class="rsvp-button animate-button">Ich bin dabei!</a>
-            <p class="contact-info">Oder rufe mich an: <a href="tel:+4915560985129">+49 015560 985129</a></p>
-        </section>
+        <div class="card fade-in-card">
+            <div class="card-content">
+                <h3>Bitte gib mir Bescheid!</h3>
+                <p>Damit ich besser planen kann, sag mir bitte kurz Bescheid, ob du dabei bist.</p>
+                <a href="mailto:deine@email.de?subject=RSVP%20Geburtstag%20Ben" class="rsvp-button animate-button">Ich bin dabei!</a>
+                <p class="contact-info">Oder rufe mich an: <a href="tel:+49123456789">+49 123 456789</a></p>
+            </div>
+        </div>
 
-        <footer class="fade-in-delay-final">
-            <p>Ich freue mich auf einen tollen Abend mit dir!</p>
-        </footer>
+        <div class="card fade-in-card">
+            <div class="card-content">
+                <p>Ich freue mich auf einen tollen Abend mit dir!</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="scroll-indicator">
+        <p>Nach unten scrollen</p>
+        <div class="arrow-down"></div>
     </div>
 
     <script src="script.js"></script>
