--- a/index.html
+++ b/index.html
@@ -15,58 +15,60 @@
         <h1 class="intro-text">Bald ist es soweit...</h1>
     </div>
 
-    <div class="card-container">
-        <div class="card fade-in-card">
-            <header>
-                <h1>Du bist eingeladen!</h1>
-                <h2>Ben feiert seinen 39. Geburtstag</h2>
-            </header>
-        </div>
-
-        <div class="card fade-in-card">
-            <div class="card-content">
-                <h3>Wann?</h3>
-                <p>26. Juli 2025</p>
-                <p>Ab 18:00 Uhr</p>
+    <div class="carousel-wrapper">
+        <div class="card-container">
+            <div class="card" id="card-1">
+                <header>
+                    <h1>Du bist eingeladen!</h1>
+                    <h2>Ben feiert seinen 39. Geburtstag</h2>
+                </header>
             </div>
-        </div>
 
-        <div class="card fade-in-card">
-            <div class="card-content">
-                <h3>Wo?</h3>
-                <p>In meinem Garten</p>
-                <p>Dortmund</p>
-                <a href="http://maps.google.com/?q=Dortmund" target="_blank" class="map-link">Auf Karte anzeigen</a>
+            <div class="card" id="card-2">
+                <div class="card-content">
+                    <h3>Wann?</h3>
+                    <p>26. Juli 2025</p>
+                    <p>Ab 18:00 Uhr</p>
+                </div>
             </div>
-        </div>
 
-        <div class="card fade-in-card">
-            <div class="card-content">
-                <h3>Was?</h3>
-                <p>Großes BBQ</p>
-                <p>Für Speisen & Getränke ist gesorgt!</p>
+            <div class="card" id="card-3">
+                <div class="card-content">
+                    <h3>Wo?</h3>
+                    <p>In meinem Garten</p>
+                    <p>Dortmund</p>
+                    <a href="https://maps.app.goo.gl/DEIN_Maps_LINK" target="_blank" class="map-link">Auf Karte anzeigen</a>
+                </div>
             </div>
-        </div>
 
-        <div class="card fade-in-card">
-            <div class="card-content">
-                <h3>Bitte gib mir Bescheid!</h3>
-                <p>Damit ich besser planen kann, sag mir bitte kurz Bescheid, ob du dabei bist.</p>
-                <a href="mailto:deine@email.de?subject=RSVP%20Geburtstag%20Ben" class="rsvp-button animate-button">Ich bin dabei!</a>
-                <p class="contact-info">Oder rufe mich an: <a href="tel:+49123456789">+49 123 456789</a></p>
+            <div class="card" id="card-4">
+                <div class="card-content">
+                    <h3>Was?</h3>
+                    <p>Großes BBQ</p>
+                    <p>Für Speisen & Getränke ist gesorgt!</p>
+                </div>
             </div>
-        </div>
 
-        <div class="card fade-in-card">
-            <div class="card-content">
-                <p>Ich freue mich auf einen tollen Abend mit dir!</p>
+            <div class="card" id="card-5">
+                <div class="card-content">
+                    <h3>Bitte gib mir Bescheid!</h3>
+                    <p>Damit ich besser planen kann, sag mir bitte kurz Bescheid, ob du dabei bist.</p>
+                    <a href="mailto:deine@email.de?subject=RSVP%20Geburtstag%20Ben" class="rsvp-button animate-button">Ich bin dabei!</a>
+                    <p class="contact-info">Oder rufe mich an: <a href="tel:+49123456789">+49 123 456789</a></p>
+                </div>
+            </div>
+
+            <div class="card" id="card-6">
+                <div class="card-content">
+                    <p>Ich freue mich auf einen tollen Abend mit dir!</p>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="scroll-indicator">
-        <p>Nach unten scrollen</p>
-        <div class="arrow-down"></div>
+        <p>Zur Seite wischen</p>
+        <div class="arrow-right"></div>
     </div>
 
     <script src="script.js"></script>
