--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="intro-text">Bald ist es soweit...</h1>
     </div>
 
-    <div class="carousel-wrapper">
+    <div class="centered-card-wrapper">
         <div class="card-container">
             <div class="card" id="card-1">
                 <header>
@@ -37,7 +37,7 @@
                     <h3>Wo?</h3>
                     <p>In meinem Garten</p>
                     <p>Dortmund</p>
-                    <a href="https://maps.app.goo.gl/DEIN_Maps_LINK" target="_blank" class="map-link">Auf Karte anzeigen</a>
+                    <a href="https://www.google.com/maps/search/Dortmund+garden" target="_blank" class="map-link">Auf Karte anzeigen</a>
                 </div>
             </div>
 
