--- a/index.html
+++ b/index.html
@@ -3,61 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ben's 39. Geburtstag - Einladung</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>Meine 39. Geburtstagsfeier 🎉</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext x='50%' y='50%' style='dominant-baseline:central;text-anchor:middle;font-size:90px;'%3E🎂%3C/text%3E%3C/svg%3E" type="image/svg+xml">
 </head>
 <body>
-    <div class="intro-overlay">
-        <h1 class="intro-text">Eine besondere Einladung für dich...</h1>
+    <div class="intro-section">
+        <h1 class="fade-in-text" data-order="1">Du bist eingeladen!</h1>
     </div>
 
-    <div class="content-wrapper">
-        <div class="section" id="greeting-section">
-            <h2 id="greeting">Hallo Freund!</h2>
-        </div>
+    <div class="intro-section">
+        <p class="fade-in-text" data-order="2">Feiere mit mir</p>
+    </div>
 
-        <div class="section" id="invite-title-section">
-            <h1>Du bist eingeladen!</h1>
-        </div>
+    <div class="intro-section">
+        <h2 class="fade-in-text" data-order="3">Meinen 39. Geburtstag!</h2>
+    </div>
 
-        <div class="section" id="birthday-info-section">
-            <h2>Ben feiert seinen 39. Geburtstag</h2>
-        </div>
+    <div class="intro-section">
+        <p class="fade-in-text" data-order="4">Am Freitag, den 02. August 2025</p>
+    </div>
 
-        <div class="section detail-item" id="date-time-section">
-            <h3>Wann?</h3>
-            <p>26. Juli 2025</p>
-            <p>Ab 18:00 Uhr</p>
-        </div>
+    <div class="intro-section">
+        <p class="fade-in-text" data-order="5">Um 18:00 Uhr</p>
+    </div>
 
-        <div class="section detail-item" id="location-section">
-            <h3>Wo?</h3>
-            <p>In meinem Garten</p>
-            <p>Dortmund</p>
-            <a href="https://www.google.com/maps/search/mein+garten+dortmund" target="_blank" class="map-link">Auf Karte anzeigen</a>
-        </div>
+    <div class="intro-section">
+        <p class="fade-in-text" data-order="6">Bei mir im Garten</p>
+    </div>
 
-        <div class="section detail-item" id="what-section">
-            <h3>Was?</h3>
-            <p>Großes BBQ</p>
-            <p>Für Speisen & Getränke ist gesorgt!</p>
-        </div>
+    <div class="intro-section">
+        <p class="fade-in-text" data-order="7">Für Speisen und Getränke ist gesorgt.</p>
+    </div>
 
-        <div class="section rsvp-section" id="rsvp-section">
-            <h3>Bitte gib mir Bescheid!</h3>
-            <p>Damit ich besser planen kann, sag mir bitte kurz Bescheid, ob du dabei bist.</p>
-            <a href="#" id="whatsapp-yes-button" class="rsvp-button animate-button">Ja, ich bin dabei!</a>
-            <a href="#" id="whatsapp-no-button" class="rsvp-button animate-button">Leider kann ich nicht</a>
-            <p class="contact-info">Oder kontaktiere mich direkt: <a href="tel:+49123456789">+49 123 456789</a></p>
-        </div>
+    <div class="full-info-section hidden">
+        <h2>Meine 39. Geburtstagsfeier</h2>
+        <p>Hallo liebe Freunde und Familie,</p>
+        <p>ich möchte meinen 39. Geburtstag gerne mit euch feiern und lade euch herzlich dazu ein!</p>
+        
+        <h3>Wann?</h3>
+        <p>Freitag, 02. August 2025</p>
+        <p>Uhrzeit: 18:00 Uhr</p>
 
-        <div class="section footer-section" id="footer-section">
-            <p>Ich freue mich auf einen tollen Abend mit dir!</p>
-        </div>
+        <h3>Wo?</h3>
+        <p>Bei mir im Garten</p>
+        <p>[Deine Adresse hier einfügen, z.B. Musterstraße 1, 12345 Musterstadt]</p>
+        <p>
+            <a href="https://maps.google.com/?q=[Deine Adresse hier]" target="_blank" class="map-link">Auf Google Maps anzeigen</a>
+        </p>
+
+        <h3>Was erwartet euch?</h3>
+        <p>Für leckere Speisen und erfrischende Getränke ist bestens gesorgt.</p>
+        <p>Gute Laune und entspanntes Beisammensein stehen im Vordergrund!</p>
+
+        <h3>Bitte um Rückmeldung!</h3>
+        <p>Damit ich besser planen kann, gib mir bitte bis zum **[Datum, z.B. 20. Juli 2025]** Bescheid, ob du dabei sein kannst.</p>
+        
+        <a href="https://wa.me/DeineTelefonnummer?text=Hallo%20ich%20komme%20gerne%20zu%20deinem%20Geburtstag!" class="whatsapp-button" target="_blank">
+            Ich komme! (WhatsApp)
+        </a>
+        <p class="whatsapp-note">Klicke hier, um mir per WhatsApp zu antworten.</p>
     </div>
 
     <script src="script.js"></script>
